# actions-example

./: .gitignore  DEPLOY_STRATEGY.md  GITHUB_SETUP.md  pyproject.toml
.github/workflows/: deploy.yml
