[project]
name = "actions-example"
version = "0.1.0"
description = "A short description of my project."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.12" # <-- ИСПРАВЛЕНО: используем ~ вместо ~
dependencies = []

[tool.uv]
# Configuration specific to uv can go here

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
addopts = "--strict-markers"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.commitizen]
name = "cz_conventional_commits"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "commitizen>=4.13.2",
    "debugpy>=1.8.20",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]
